Revisione html correzione errori, pulizia e commenti

--- a/index.html
+++ b/index.html
@@ -14,32 +14,50 @@
     <!-- header -->
     <header>
       <!-- top header -->
-      <section id="top_header">
+      <div id="top_header">
         <div class="container_top_header width_100">
+          <!-- menù -->
           <div class="nav_menu">
             <div class="logo_menu inline_block left">
                 <img src="img/logo.png" alt="">
             </div>
             <div class="menu_center left visible_lg">
               <ul class="menu_top list-inline">
-                <li><a href="">Products <span class="glyphicon glyphicon-chevron-down menu_chevron" aria-hidden="true"></span></a></li>
+                <li>
+                  <a href="">Products
+                    <span class="glyphicon glyphicon-chevron-down menu_chevron" aria-hidden="true"></span>
+                  </a>
+                </li>
                 <li><a href="">Customers</a></li>
-                <li><a href="">Community <span class="glyphicon glyphicon-chevron-down menu_chevron" aria-hidden="true"></span></a></li>
+                <li>
+                  <a href="">Community
+                    <span class="glyphicon glyphicon-chevron-down menu_chevron" aria-hidden="true"></span>
+                  </a>
+                </li>
                 <li><a href="">Pricing</a></li>
               </ul>
             </div>
             <div class="menu_right inline_block right">
               <ul class="menu_top list-inline visible_lg">
                 <li><a href="">Docs</a></li>
-                <li><a href="">Support <span class="glyphicon glyphicon-chevron-down menu_chevron" aria-hidden="true"></span></a></li>
+                <li>
+                  <a href="">Support
+                    <span class="glyphicon glyphicon-chevron-down menu_chevron" aria-hidden="true"></span>
+                  </a>
+                </li>
                 <li><a href="">Login</a></li>
-                <li><button class="btn button_menu" type="button" name="button">Sign up</button></li>
+                <li>
+                  <button class="btn button_menu" type="button" name="button">Sign up</button>
+                </li>
               </ul>
-              <a href="#"><span class="glyphicon glyphicon glyphicon-menu-hamburger menu_chevron menu_bar hidden_lg" aria-hidden="true"></span></a>
+              <a href="#">
+                <span class="glyphicon glyphicon glyphicon-menu-hamburger menu_chevron menu_bar hidden_lg" aria-hidden="true"></span>
+              </a>
             </div>
           </div>
         </div>
-      </section>
+      </div>
+      <!-- /menù -->
       <!-- /top header -->
 
       <!-- bottom header -->
@@ -47,10 +65,15 @@
         <div class="container_bottom_header width_100">
           <div class="container padding_upbottom">
             <div class="row">
+
+              <!-- jumbotron -->
               <div class="col-xs-12 col-md-7 col-lg-7">
                 <h1 class="main_title bold white">The simplest cloud platform for developers and team</h1>
                 <h2 class="main_subtitle white">We make it simple to launch in the cloud and scale up as you grow – with an intuitive control panel, predictable pricing, team accounts, and more.</h2>
               </div>
+              <!-- /jumbotron -->
+
+              <!-- form -->
               <div class="col-xs-12 col-md-5 col-lg-5">
                 <div class="header_form padding_upbottom">
                   <h2 class="deepblue bold text-center">Deploy your app in seconds.</h2>
@@ -75,6 +98,8 @@
                   </div>
                 </div>
               </div>
+              <!-- /form -->
+
             </div>
           </div>
         </div>
@@ -87,6 +112,8 @@
 
     <!-- main -->
     <main>
+
+      <!-- sezione loghi -->
       <section id="logos">
         <div class="container_logos background_container_lightblue padding_upbottom width_100">
           <div class="container padding_upbottom">
@@ -123,13 +150,17 @@
           </div>
         </div>
       </section>
+      <!-- /sezione loghi -->
 
+      <!-- Sezione deploy -->
       <section id="Deploy_and_scale">
         <div class="container padding_upbottom">
           <div class="row">
             <div class="col-xs-12 col-md-12 col-lg-12">
               <h2 class="title_h2 text-center  bold deepblue">Deploy and scale seamlessly</h2>
             </div>
+          </div>
+          <div class="row">
             <div class="col-xs-12 col-md-12 col-lg-12">
               <p class="paragraph_subtitle text-center margin_bottom30">Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.
               </p>
@@ -180,7 +211,9 @@
           </div>
         </div>
       </section>
+      <!-- /Sezione deploy -->
 
+      <!-- Sezione design for developers -->
       <section id="Design_for_developers">
         <div class="container_developers padding_upbottom background_container_lightblue">
           <div class="container">
@@ -188,21 +221,28 @@
               <div class="col-xs-12 col-md-12 col-lg-12">
                 <h2 class="title_h2 text-center bold deepblue">Design for developer</h2>
               </div>
+            </div>
+            <div class="row">
               <div class="col-xs-12 col-md-12 col-lg-12">
                 <p class="paragraph_subtitle text-center margin_bottom60">Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.
                 </p>
               </div>
+            </div>
+            <div class="row">
               <div class="col-xs-6 col-xs-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
                 <span class="glyphicon glyphicon glyphicon-chevron-left left_arrow absolute" aria-hidden="true"></span>
                 <span class="glyphicon glyphicon glyphicon-chevron-right right_arrow absolute" aria-hidden="true"></span>
                 <div class="dev_slider margin_bottom30">
                   <img class="img-responsive" src="img/screenshot-create-droplet-12336b41.jpg" alt="">
                 </div>
-
               </div>
+            </div>
+            <div class="row">
               <div class="col-xs-12">
                 <p class="text-center paragraph_font deepblue bold">Create computer servers in 55 seconds or less</p>
               </div>
+            </div>
+            <div class="row">
               <div class="col-xs-12 text-center">
                 <span class="carousel_ball"></span>
                 <span class="carousel_ball"></span>
@@ -213,13 +253,17 @@
           </div>
         </div>
       </section>
+      <!-- /Sezione design for developers -->
 
+      <!-- Sezione features -->
       <section id="features">
         <div class="container padding_upbottom">
           <div class="row">
             <div class="col-xs-12">
               <h2 class="title_h2 text-center bold deepblue margin_bottom60">The features your business needs</h2>
             </div>
+          </div>
+          <div class="row">
             <div class="col-xs-12 col-md-4 col-lg-4">
               <div class="service_box margin_bottom30">
                 <img src="img/pred-pricing.svg" alt="">
@@ -247,7 +291,9 @@
           </div>
         </div>
       </section>
+      <!-- /Sezione features -->
 
+      <!-- Sezione service -->
       <section id="service">
         <div class="container_service background_container_bluemarine">
           <div class="container padding_upbottom80">
@@ -255,6 +301,8 @@
               <div class="col-xs-12">
                 <h2 class="title_h2 text-center bold white">Service your customers around the world from 12 regions</h2>
               </div>
+            </div>
+            <div class="row">
               <div class="col-xs-12 col-md-6 col-md-6">
                 <div class="service_row width_100">
                   <p>AMS2 <span>Amsterdam, Netherlands</span> <a href="">test speed ></a></p>
@@ -299,7 +347,9 @@
           </div>
         </div>
       </section>
+      <!-- /Sezione service -->
 
+      <!-- Sezione rockerbox -->
       <section id="rockerbox">
         <div class="container_rockerbox background_container_lightblue width_100 padding_upbottom80">
           <div class="container">
@@ -331,11 +381,15 @@
           </div>
         </div>
       </section>
+      <!-- /Sezione rockerbox -->
+
     </main>
     <!-- main -->
 
     <!-- footer -->
     <footer>
+
+      <!-- sezione top footer -->
       <section id="top_footer">
         <div class="container_topfooter background_container_bluemarine">
           <div class="container padding_upbottom80">
@@ -352,7 +406,9 @@
           </div>
         </div>
       </section>
+      <!-- /sezione top footer -->
 
+      <!-- sezione bottom footer -->
       <section id="bottom_footer">
         <div class="container_bottom_footer width_100 background_container_deepblue">
           <div class="container padding_upbottom80">
@@ -448,6 +504,7 @@
           </div>
         </div>
       </section>
+      <!-- /sezione bottom footer -->
 
     </footer>
     <!-- /footer -->
