--- a/index.html
+++ b/index.html
@@ -357,6 +357,8 @@
               <div class="col-xs-12 col-md-12 col-lg-12">
                 <h2 class="title_h2 text-center bold deepblue margin_bottom60">Development teams loves DigitalOcean</h2>
               </div>
+            </div>
+            <div class="row">
               <div class="col-xs-8 col-xs-offset-2 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
                 <span class="glyphicon glyphicon glyphicon-chevron-left left_arrow absolute" aria-hidden="true"></span>
                 <span class="glyphicon glyphicon glyphicon-chevron-right right_arrow absolute" aria-hidden="true"></span>
@@ -368,7 +370,7 @@
                   <div class="rockerbox_link">
                     <a class="bold" href="">Read story ></a>
                   </div>
-                  </div>
+                </div>
               </div>
             </div>
             <div class="row">
@@ -397,6 +399,7 @@
               <div class="col-xs-12">
                 <h2 class="title_h2 text-center bold white">Get started now.</h2>
               </div>
+            </div>
               <div class="row">
                 <div class="col-xs-12 text-center">
                   <button class="btn button_footer" type="button" name="button">Create your account</button>
