--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
+    <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+    <!-- Style -->
     <link rel="stylesheet" href="css/style.css">
     <title>Digital Ocean</title>
   </head>
@@ -400,16 +403,15 @@
                 <h2 class="title_h2 text-center bold white">Get started now.</h2>
               </div>
             </div>
-              <div class="row">
-                <div class="col-xs-12 text-center">
-                  <button class="btn button_footer" type="button" name="button">Create your account</button>
-                </div>
+            <div class="row">
+              <div class="col-xs-12 text-center">
+                <button class="btn button_footer" type="button" name="button">Create your account</button>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <!-- /sezione top footer -->
+        <!-- /sezione top footer -->
 
       <!-- sezione bottom footer -->
       <section id="bottom_footer">
