--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <!-- menù -->
           <div class="nav_menu">
             <div class="logo_menu inline_block left">
-                <img src="img/logo.png" alt="">
+                <a href=""><img src="img/logo.png" alt=""></a>
             </div>
             <div class="menu_center left visible_lg">
               <ul class="menu_top list-inline">
