--- a/bonus/index.html
+++ b/bonus/index.html
@@ -515,18 +515,17 @@
       <section id="shark-chat">
       <div class="shark_container">
         <div class="shark_bubble left">
-          <div class="bubble_container">
+          <div class="bubble_container relative">
             <p class="deepblue">Can i help answer any questions you have about DigitalOcean?</p>
-            <i class="fas fa-caret-right"></i>
+            <i class="fas fa-caret-right absolute"></i>
           </div>
         </div>
-        <div class="shark_image left">
-          <div class="image_container">
+        <div class="shark_image relative left">
+          <div class="image_container absolute">
             <img src="file:///C:/Users/simon/Documents/boolean/esercitazioni/css/html-css-digitalocean/img/https___driftt.imgix.net_https%253A%252F%252Fs3.amazonaws.png" alt="">
           </div>
         </div>
       </div>
-
     </section>
       <!-- sezione shark-chat -->
 
