--- a/bonus/index.html
+++ b/bonus/index.html
@@ -522,7 +522,7 @@
         </div>
         <div class="shark_image relative left">
           <div class="image_container absolute">
-            <img src="file:///C:/Users/simon/Documents/boolean/esercitazioni/css/html-css-digitalocean/img/https___driftt.imgix.net_https%253A%252F%252Fs3.amazonaws.png" alt="">
+            <img src="img/https___driftt.imgix.net_https%253A%252F%252Fs3.amazonaws.png" alt="">
           </div>
         </div>
       </div>
